tdf#126061 Make text edit outliner view show cursor

Change-Id: Ic4e8b5984d5b21c3b789eba943d35d4cad1ba867
Reviewed-on: https://gerrit.libreoffice.org/74676
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>
(cherry picked from commit 3a662445a0e3666637e5eb140b106a1347f050eb)